css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');

@import url('colors.css');

html {
    font-family: 'Roboto', sans-serif;
}

/* Global Styles */
body {
    background-color: var(--background-color);
    background-image: url('../images/bg2.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    justify-content: center;

}

.body {
    background: linear-gradient(180deg,var(--main-background-color),var(--main-background-color2));
    background-size: cover;
    border-radius: 10px;
    overflow: hidden;
    padding: 10px;
    justify-content: center;
}

h2,
p {
    color: var(--primary-text-color);
    text-align: center;
}




h3,info h3{
    border-radius: 5px;
    overflow: hidden;
    color: var(--primary-text-color);
    background: linear-gradient(135deg, var(--h3-background-color2),var(--h3-background-color));
    backdrop-filter: blur(10px);
    border-radius: 5px;
    
    margin-left: auto;
    margin-right: auto;
    padding: 5px;
}


.info h3 {
    font-size: 1.1em;
    
}

.info h4 {
    color: var(--primary-text-color);
    
    backdrop-filter: blur(10px);
    margin-left: auto;
    margin-right: auto;
    padding: 5px;
}

.italic {
    font-style: italic;
}

.softwareattributes {
    font-style: italic;
    color: var(--highlight-color);
}

/* Headings and Titles */
.titles {
    text-align: center;
    padding: 20px;
    background: linear-gradient(0deg, var(--title-gradient-start), var(--title-gradient-end));
    border-radius: 10px;
    box-shadow: 0px 4px 6px var(--box-shadow-color);
    margin-bottom: 30px;
    backdrop-filter: blur(10px);
}

.titles h1 {
    font-size: 2.5em;
    color: var(--primary-text-color);
    margin: 0;
    letter-spacing: 1px;
    font-family: Raleway;
    font-weight: bold;
}

.titles h2 {
    font-size: 1.5em;
    color: var(--primary-text-color);
    margin-top: 10px;
    font-weight: 300;
}

.titles a {
    color: var(--primary-text-color);
    text-decoration: none;

}

.titles a:hover {
    color: var(--link-hover-color);
    border-bottom-color: var(--link-hover-color);
}

/* Links and Menus */
.links {
    border-radius: 5px;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 20px;
    height: auto;
    background: linear-gradient(180deg,var(--link-gradient-start),var(--link-gradient-end)); /* Example gradient */
    backdrop-filter: blur(10px);
    width: 100%;
    max-width: 800px;
    padding: 10px;
    box-sizing: border-box;
    margin: 0 auto;
    box-shadow: 0px 4px 6px var(--box-shadow-color);
}

.links a {
    color: var(--link-color);
    text-decoration: none;
}

.links a:hover {
    color: var(--link-hover-color);
}

.links h2 {
    margin: 0;
    padding: 0;
    text-align: center;
    color: var(--link-color);
}

.links img {
    width: clamp(5px, 20px, 40px);
    height: auto;
}

/* Contests and Projects */
.projects {
    width: clamp(200px, 100%, 800px);
}

.contests {
    display: flex;
    flex-direction: column;
    margin:0;
   
}

.contest {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    margin-left:1vw;
    margin-right:1vw;
}

.contest:not(:last-child) {
    margin-bottom: .5vw; 
}
.contest:not(:first-child) {
    margin-top: .5vw; 
}
.contest a, .contest h4 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    width: clamp(200px, 100%, 900px);
    text-decoration: none;
    color:var(--primary-text-color);
    box-sizing: border-box;
    position: relative;

}

.contest_info {
    
    flex: 2 1 0;
    min-width: 45%; 
    width:100%;
    padding-right: 1vw;
    text-align: left;
    
}


.project_info {
    color: var(--highlight-color);
    
}
.projects h4,.assignments h4{
    margin: 1vw;
    max-width: 95%;
}

.rank, .rating {
    line-height: normal; 
    align-self: center; 
    height: auto; 
    display: flex; 
    align-items: center; 
    padding-right: vw; 
}

.rank {
    text-align: left;
    min-width: 65%;
    flex: 1;
    color: var(--primary-text-color);
}
.rank b ,.rating b{
    margin-left: 5px; 
    margin-right: 5px; 
}

.rating {
    text-align: center;
    flex: 1;
    min-width: 15%;
    color: var(--primary-text-color);
    width: fit-content;
}

.rating b,.rank b {
    font-weight: 800; 
    color: var(--highlight-color2); 
}
.section1{

    background: linear-gradient(135deg, var(--h3-background-color6),var(--h3-background-color5));
    backdrop-filter: blur(10px);
    border-radius: 5px;
    box-shadow: 0px 4px 6px var(--box-shadow-color);
    padding-bottom: .1vw;
}
.projects,
.contests {
    padding-left: 10px;
    color: var(--primary-text-color);
    text-decoration: none;
}
.contests{
    padding-bottom: 1vw;
}

.contest:hover {
    text-decoration: underline;
}

.projects h4,
.contests h4 {
    color: var(--primary-text-color);
    text-decoration: none;
    
}
.projects h4{
    width: 100%;
}
/* Lists and Highlighting */
.numlist li::marker {
    color: var(--highlight-color);
}

.bulletlist li::marker {
    color: var(--highlight-color);
}
.list{
    background-color: antiquewhite;
    background: linear-gradient(135deg, var(--h3-background-color6),var(--h3-background-color5));
    backdrop-filter: blur(10px);
    border-radius: 5px;
    box-shadow: 0px 4px 6px var(--box-shadow-color);
    
    
}
.numlist,.bulletlist{
    padding-bottom: .5vw;
    font-size:large;
    font-weight: bold;
    padding-left: 40px;
}

.langs {
    margin: 0;
    padding: 0;
}

.list li {
    margin: 5px 0;
    color: var(--primary-text-color);
}


.assignments {
    padding-left: 10px;
    text-decoration: none;
    color: var(--primary-text-color);
}
.assignments a{
    color: var(--primary-text-color);
    text-decoration: none;
}
.assignments a:hover{
    text-decoration: underline;
    text-decoration-color: --highlight-color;
}
.links a:hover {
    text-decoration: underline;
}

/*
.assignment:hover {
    text-decoration: underline;
}*/

.project-link {
    text-decoration: none;
    color: inherit;
}

.project-link:hover {
    text-decoration: underline;
}

.titles a:hover {
    text-decoration: underline;
}

.highlight {
    color: var(--highlight-color);
    font-weight: bold;
}

.proficiency {
    font-weight: bold;
    font-size: 0.9em;
    color: var(--highlight-color);
}

ol {
    color: var(--highlight-color);
}

.info ol li,
.info ul li {
    font-size: .9em;
    color: var(--primary-text-color);
}

@media (max-width: 700px) {
   
    .contest_info{
            min-width: 50%;

    }
    .contest .project_info{
        text-decoration: underline;
        text-decoration-color: var(--mobile-underline-color);
    }
    .rank{
        margin-left: 10px;
        min-width: 40%;
        display: flex;
        flex-wrap: wrap;
    }
    .highlight{
        text-decoration: underline;
        text-decoration-color: var(--mobile-underline-color);
    }
    .titles{
        font-size: .8em;
    }
    .links {
        text-decoration: underline;
        text-decoration-color: var(--mobile-underline-color);
        font-size: .8em;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .links img {
        width: 30px;
        height: auto;
        margin-right: 10px;
    }

    .rank {
        text-align: left;
        flex: 1;
        width: auto;
        overflow-wrap: break-word;
    }
}

@media (min-width: 768px) {
    body {
        margin: 0 2vw; 
    }
}

@media (min-width: 1024px) {
    body {
        margin: 0 10vw; 
    }
    .rank{
        min-width: 35%;
    }
    .contest_info{
        min-width: 55%;
    }
    .links{
        flex-wrap: wrap;
        justify-content: center;
    }
}

@media (min-width: 1440px) {
    body {
        margin: 0 30vw; 
    }
    .rank{
        min-width: 35%;
    }
    .contest_info{
        min-width: 55%;
    }  
}

